--- a/LampungGuide/app/src/main/AndroidManifest.xml
+++ b/LampungGuide/app/src/main/AndroidManifest.xml
@@ -9,8 +9,14 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LampungGuide"
+        android:theme="@style/Theme.GD1"
         tools:targetApi="31">
+        <activity
+            android:name=".LoginMember"
+            android:exported="false" />
+        <activity
+            android:name=".LoginPilih"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
