--- a/LampungGuide/settings.gradle
+++ b/LampungGuide/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Lampung Guide"
+rootProject.name = "GD1"
 include ':app'
