--- a/LampungGuide/app/src/main/AndroidManifest.xml
+++ b/LampungGuide/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.GD1"
         tools:targetApi="31">
         <activity
+            android:name=".SignUp"
+            android:exported="false" />
+        <activity
+            android:name=".MainMenu"
+            android:exported="false" />
+        <activity
             android:name=".LoginMember"
             android:exported="false" />
         <activity
